--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+{
+  "name": "tu-proyecto",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  }
+}
+
 # Logs
 logs
 *.log
@@ -39,7 +49,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+node_modules
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
@@ -134,3 +144,4 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+Backend/configLocal.js
