--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,11 +13,15 @@
   "type": "module",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "eslint": "^9.26.0"
   }
 }
-
